tests/ui/associated-consts/infer-placeholder-in-non-suggestable-pos.stderr
warning: `&` without an explicit lifetime name cannot be used here
  --> $DIR/infer-placeholder-in-non-suggestable-pos.rs:6:18
   |
LL |     const ASSOC: &dyn Fn(_) = 1i32;
   |                  ^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #115010 <https://github.com/rust-lang/rust/issues/115010>
   = note: `#[warn(elided_lifetimes_in_associated_constant)]` on by default
help: use the `'static` lifetime
   |
LL |     const ASSOC: &'static dyn Fn(_) = 1i32;
   |                   +++++++

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/infer-placeholder-in-non-suggestable-pos.rs:6:26
   |
LL |     const ASSOC: &dyn Fn(_) = 1i32;
   |                          ^ not allowed in type signatures

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0121`.
